# backend/src/routes/private/transactionRoutes.ts
@@ -1,0 +1,27 @@
+import { Router } from 'express';
+import { isAuthenticated } from '../../middlewares/auth/isAuthenticated';
+import { CreateTransactionController } from '../../controllers/transaction/CreateTransactionController';
+import { DeleteTransactionController } from '../../controllers/transaction/DeleteTransactionController';
+import { EditTransactionController } from '../../controllers/transaction/EditTransactionController';
+import { FindAllTransactionsController } from '../../controllers/transaction/FindAllTransactionsController';
+import { FindTransactionController } from '../../controllers/transaction/FindTransactionController';
+
+const privateTransactionRouter = Router();
+
+// Transaction Routes
+// Create (Authenticated)
+privateTransactionRouter.post('/create', isAuthenticated, new CreateTransactionController().handle);
+
+// Find by ID (Authenticated)
+privateTransactionRouter.get('/find/:id', isAuthenticated, new FindTransactionController().handle);
+
+// Find All (Authenticated)
+privateTransactionRouter.get('/find', isAuthenticated, new FindAllTransactionsController().handle);
+
+// Update (Authenticated)
+privateTransactionRouter.put('/update/:id', isAuthenticated, new EditTransactionController().handle);
+
+// Delete (Authenticated)
+privateTransactionRouter.delete('/delete/:id', isAuthenticated, new DeleteTransactionController().handle);
+
+export { privateTransactionRouter };
